Update Indexer targets after doing schema update